# assignment

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dags/: github_commit_collector.py
scripts/: load_repos.sh  run_collector.sh  run_repo_loader.sh  run_restore.sh
src/github_commit_pipeline/: collector.py  repo_loader.py  restore.py  schema.py  storage.py  topics.yml
