[tool.poetry]
name = "assignment"
version = "0.1.0"
packages = [{ include = "github_commit_pipeline", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
PyGithub      = "^2.3"   # GitHub API
minio         = "^7.2"   # S3-like storage
sqlalchemy = "1.4.51"
duckdb-engine = "^0.10"
python-dotenv = "^1.0"
pyyaml = "^6.0"
backoff = "2.2.1"
boto3 = "1.38.23"
tqdm = "4.67.1"
gitpython = "^3.1.44"
